# ObjDetection_rk

./: .gitignore  CMakeLists.txt  config.yaml
include/: common.h  tracker.h  yolo.h
src/: main.cc  tracker.cpp  yolo.cc
